--- a/build.gradle
+++ b/build.gradle
@@ -61,9 +61,14 @@ dependencies {
 	compile("com.atlassian.commonmark:commonmark:0.10.0")
 	compile("com.atlassian.commonmark:commonmark-ext-autolink:0.10.0")
 	compile("de.flapdoodle.embed:de.flapdoodle.embed.mongo")
+	compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.3")
+	compile("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:0.19.3")
 	compile("org.springframework.kotlin:spring-webflux-kotlin-coroutine:0.3.0")
 	compile("org.springframework.kotlin:spring-data-mongodb-kotlin-coroutine:0.3.0")
 	compile("org.springframework.kotlin:spring-boot-autoconfigure-kotlin-coroutine:0.3.0")
+	compile("io.reactivex:rxjava:1.3.3") // Should not be needed but else KotlinReflectionParameterNameDiscoverer fails
+	compile("io.reactivex.rxjava2:rxjava:2.1.5") // Should not be needed but else KotlinReflectionParameterNameDiscoverer fails
+
 	runtime("org.springframework.boot:spring-boot-devtools")
 	testCompile("org.springframework.boot:spring-boot-starter-test") {
 		exclude module: "junit"
